# Scanner-V5

./: .gitattributes  .gitignore  .gitmessage  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  metodologia_v4.2.2_prompt.md  metodologia_v5.0.0_prompt.md  scanner_v4.2.1.html  scanner_v5_standalone.html
backend/: alembic.ini  launcher.py  main.py  pyproject.toml  settings.py
backend/alembic/: env.py
backend/api/: README.md  __init__.py  app.py  auth.py  broadcaster.py  deps.py  events.py  workers.py
backend/api/routes/: __init__.py  candles.py  config.py  database.py  fixtures.py  health.py  scan.py  signals.py  slots.py  system.py  validator.py  websocket.py
backend/engines/: __init__.py  registry_runtime.py
backend/engines/data/: README.md  __init__.py  api_keys.py  config.py  constants.py  engine.py  fetcher.py  integrity.py  market_calendar.py  models.py  probes.py  scan_loop.py
backend/engines/database/: README.md  __init__.py  heartbeat.py  rotation.py  watchdog.py
backend/engines/scoring/: README.md  __init__.py  aggregator.py  alignment.py  analyze.py  bands.py  constants.py  errors.py  healthcheck.py  ind_builder.py
backend/engines/scoring/confirms/: __init__.py  _helpers.py  bollinger.py  categorize.py  gap.py  relative_strength.py  squeeze.py  volume.py
backend/engines/scoring/indicators/: __init__.py  atr.py  bollinger.py  gap.py  moving_averages.py  pivots.py  volume.py
backend/engines/scoring/risks/: __init__.py  _helpers.py  fakeouts.py  volume.py
backend/engines/scoring/triggers/: __init__.py  _helpers.py  candle_15m.py  double.py  envolvente.py  ma_cross.py  orb.py
backend/fixtures/: README.md  qqq_canonical_v1.json  qqq_canonical_v1.metrics.json  qqq_canonical_v1.sha256
backend/fixtures/parity_reference/: README.md  parity_qqq_canonical.py  parity_qqq_regenerate.py  regenerate_from_observatory.py
backend/fixtures/parity_reference/fixtures/: parity_qqq_sample.json
backend/modules/: __init__.py
backend/modules/config/: README.md  __init__.py  crypto.py  loader.py  models.py
backend/modules/db/: README.md  __init__.py  backup.py  bootstrap.py  helpers.py  models.py  session.py
backend/modules/fixtures/: __init__.py  errors.py  loader.py  metrics_lookup.py  models.py
backend/modules/signal_pipeline/: __init__.py  pipeline.py
backend/modules/slot_registry/: README.md  __init__.py  errors.py  loader.py  models.py  writer.py
backend/modules/validator/: README.md  __init__.py  log_writer.py  models.py  runner.py
backend/modules/validator/checks/: __init__.py  a_fixtures.py  b_canonicals.py  c_registry.py  d_infra.py  e_e2e.py  f_parity.py  g_connectivity.py
backend/tests/: test_bootstrap.py  test_main.py
backend/tests/api/: test_broadcaster.py  test_config.py  test_database.py  test_fixtures.py  test_health.py  test_scan.py  test_signals.py  test_slots.py  test_static.py  test_validator.py  test_websocket.py  test_workers.py
backend/tests/engines/: test_api_keys.py  test_config.py  test_fetcher.py  test_integrity.py  test_market_calendar.py  test_registry_runtime.py
backend/tests/engines/data/: test_degraded.py  test_engine.py  test_scan_loop.py  test_warmup_db_first.py
backend/tests/engines/database/: test_aggressive_rotation.py  test_archive_rotation.py  test_heartbeat.py  test_rotation.py  test_watchdog.py
backend/tests/engines/scoring/: test_aggregator.py  test_alignment.py  test_analyze.py  test_analyze_fase5.py  test_bands.py  test_confirms_bollinger.py  test_confirms_categorize.py  test_confirms_gap.py  test_confirms_relative_strength.py  test_confirms_squeeze.py  test_confirms_volume.py  test_healthcheck.py  test_ind_builder.py  test_indicators.py  test_indicators_bb_squeeze.py  test_indicators_gap.py  test_indicators_intraday.py  test_indicators_pivots.py  test_indicators_vol_sequence.py  (+8 more)
(+139 files in other folders)
