[project]
name = "scanner-v5-backend"
version = "0.1.0"
description = "Scanner v5 live — trading options scanner backend"
readme = "../README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [
    { name = "Álvaro" },
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",

    # Data provider
    "httpx>=0.27.0",

    # Auth + encryption
    "cryptography>=43.0.0",

    # Config + validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Semver parsing (SpecifierSet) — slot_registry engine compat check
    "packaging>=24.0",

    # Logging
    "loguru>=0.7.2",

    # Market calendar (US holidays/half-days)
    "exchange-calendars>=4.5.0",

    # S3 backup (any S3-compatible)
    "boto3>=1.35.0",

    # Misc
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",          # para testing del API
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "freezegun>=1.5.0",       # mocks de datetime para tests ET-sensibles
    "moto[s3]>=5.1.0",        # mock S3 para tests de backup/restore
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ═══════════════════════════════════════
# Ruff — linter + formatter
# ═══════════════════════════════════════
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "alembic/versions",  # migrations son auto-generadas
    "frontend",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (formatter lo maneja)
    "B008",   # function call in default argument (FastAPI Depends lo requiere)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N806"]  # nombres largos descriptivos permitidos en tests

# ═══════════════════════════════════════
# pytest
# ═══════════════════════════════════════
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m",
    "not slow",  # tests slow se corren explícito con `pytest -m slow`
]
markers = [
    "integration: marca tests que requieren servicios externos mockeados",
    "slow: tests que toman >1s",
    "parity: tests de paridad contra canonical del Observatory",
]

# ═══════════════════════════════════════
# mypy — type checking estricto en público
# ═══════════════════════════════════════
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true  # para deps sin stubs

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # tests pueden ser menos estrictos

# ═══════════════════════════════════════
# Coverage
# ═══════════════════════════════════════
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "alembic/*",
    "*/README.md",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
